!!! Fixed #5. Spacing issues for Pirate Forms on Contact page.

--- a/style.css
+++ b/style.css
@@ -6169,8 +6169,12 @@ h2.screen-reader-text {
 -----------------------------------------*/
 .pirate-forms-submit-button{
     clear: both;
-    margin-left: 15px;
     float: left;
+}
+
+.pirate_forms_wrap label {
+	display: block;
+	margin-bottom: 0;
 }
 
 /*---------------------------------------
